# IGL

./: .gitignore  LICENSE  README.md  README_HumanoidVerse.md  README_HumanoidVerse2.md  README_HumanoidVerse2_zh.md  README_zh.md  pyproject.toml  setup.py
data/motions/OmniH2O/: READE.md
data/motions/asap/: READE,txt  READE.md
humanoidverse/: eval_agent.py  hydra_main.py  play_agent.py  train_agent _debug.py  train_agent.py  train_agent_debug.py
humanoidverse/agents/base_algo/: base.py  base_algo.py  register.py
humanoidverse/agents/callbacks/: analysis_plot_locomotion.py  analysis_plot_template.html  base_callback.py
humanoidverse/agents/modules/: act_modules.py  act_modules_test.yaml  data_utils.py  data_utils_chunk.py  modules.py  ppo_modules.py
humanoidverse/agents/ppo/: ppo.py  register.py
humanoidverse/config/: base.yaml  base_eval.yaml  base_play.yaml
humanoidverse/config/algo/: act_ppo.yaml  chunk_ppo.yaml  ppo.yaml
humanoidverse/config/base/: hydra.yaml  structure.yaml
humanoidverse/config/domain_rand/: NO_domain_rand.yaml  domain_rand_base.yaml
humanoidverse/config/env/: asap_motion_tracking.yaml  base_task.yaml  legged_base.yaml  locomotion.yaml  locomotion_gait.yaml  motion_tracking.yaml
humanoidverse/envs/: task.py
humanoidverse/utils/: average_meters.py  common.py  config_utils.py  helpers.py  inference_helpers.py  logging.py  math.py  torch_utils.py
isaac_utils/: rotations.py
motion_lib/: motion_lib_base.py  motion_lib_robot.py
motion_lib/aosp/: motion_lib_base.py  motion_lib_robot.py  skeleton.py  torch_humanoid_batch.py
(+167 files in other folders)
