[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "humanoidverse"
version = "0.0.1"
description = "Humanoidverse: Multi-Simulator Training Environments for Humanoid Robots"
authors = [
    { name = "Jiawei Gao", email = "winstongu20@gmail.com" },
]
requires-python = ">=3.8"
# These are the core dependencies that are common to both environments
dependencies = [
    "hydra-core>=1.2.0",
    "numpy==1.23.5",
    "rich",
    "ipdb",
    "matplotlib",
    "termcolor",
    "wandb",
    "plotly",
    "tqdm",
    "loguru",
    "meshcat",
    "pynput",
    "scipy",
    "tensorboard",
    "onnx",
    "onnxruntime",
    "opencv-python"
]
